getting there! fixed sizing and alignment on mob

--- a/src/App.scss
+++ b/src/App.scss
@@ -1223,6 +1223,19 @@ h2 {
 
 
 @media (max-width: 600px) {
+
+  #selectorButtons {
+    height: 15vh !important;
+  }
+
+  #shortBio {
+    font-size: 1rem !important;
+    line-height: 1.2rem;  
+  }
+
+  #myName {
+    font-size: 1.5rem !important;
+  }
  #skillsBox {
   margin-bottom: 5% !important;
  }
@@ -1284,7 +1297,7 @@ h2 {
   }
   #compTitle {
     width: 100% !important;
-      font-size: 2rem;
+      font-size: 1.5rem;
       grid-area: title;
       -webkit-animation: swing-in-top-fwd 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
               animation: swing-in-top-fwd 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
@@ -1331,8 +1344,8 @@ h2 {
     display: none;
   }
   #eduImagesParent{
-    grid-template-columns: repeat(3, 70px) !important;
-    grid-template-rows: repeat(3, 70px) !important;
+    grid-template-columns: repeat(3, 12vh) !important;
+    grid-template-rows: repeat(3, 6vh) !important;
     gap: 1%;
   }
   #innerSection {
@@ -1343,12 +1356,29 @@ h2 {
     grid-template-rows: 1fr !important;
     width: 100% !important;
     padding: 2% 0 2% 0 !important;
+    height: fit-content !important;
+    padding: 2% 0 3% 0 !important;
   }
   #myInfoBlock {
     margin: 0 !important;
     width: 100% !important;
     height: 100% !important;
+    position: relative;
     background-color: rgba(255, 255, 255, 0.5) !important;
+    &::before {
+      background-image: url('./myLogo.png') !important;
+      background-size: contain !important;
+      background-repeat: no-repeat !important;
+      background-position: center !important;
+      content: '' !important;
+      top: 0 !important;
+      left: 0 !important;
+      width: 100% !important;
+      height: 100% !important;
+      position: absolute !important;
+      z-index: -1 !important;
+      opacity: 0.3 !important;
+    }
   }
   .section.myInfo {
     grid-template-columns: 1fr !important;
@@ -1390,11 +1420,11 @@ h2 {
     position: absolute !important;
     top: 0;
     left: 0;
-    height: 80% !important;
+    height: 85% !important;
     z-index: 30 !important;
   }
   #selectorButton {
-    height: 20vh !important;
+    height: 15vh !important;
     z-index: 100 !important;
   }
   .section {
@@ -1402,6 +1432,7 @@ h2 {
     border-radius: 10px !important;
     align-content: center !important;
     align-items: center !important;
+    margin: 0 !important;
   }
   #expContent {
     padding: 0 !important;
@@ -1414,7 +1445,7 @@ h2 {
     &:before{
       display: none !important;
     }
-    height: 60vh !important;
+    height: 100% !important;
   }
   #imgCaption {
     font-size: 4vw !important;
@@ -1428,14 +1459,13 @@ height: 100% !important;
     gap: 1rem !important;
   }
   #experience {
-    height: -webkit-fit-content !important;
-    height: -moz-fit-content !important;
-    height: fit-content !important;
+    max-height: 100vh !important;
     width: -webkit-fit-content !important;
     width: -moz-fit-content !important;
     width: fit-content !important;
     padding: 0 !important;
     margin: 0 !important;
+    height: 70vh !important;
   }
   #expAnimation img {
     overflow: hidden !important;
@@ -1448,11 +1478,14 @@ height: 100% !important;
     flex-direction: column;
     justify-content: center !important;
     align-items: center;
-    max-height: 10vh !important;
+    max-height: 8vh !important;
     overflow: hidden !important;
     width: 100vw !important;
     margin-left: 0 !important;
     
+      }
+      #cardMat {
+        display: none !important;
       }
 
 
@@ -1478,7 +1511,9 @@ height: 100% !important;
   grid-template-columns: repeat(6, 1fr) !important;
   margin: 0 !important;
   grid-template-rows: 100%;
-  gap: 2% !important; }
+  gap: 2% !important;
+  overflow-y: hidden !important;
+}
 }
 .cardActive #sectionPic {
 -o-object-fit: contain !important;
@@ -1872,7 +1907,7 @@ height: 100%;}
   justify-content: center;
   align-items: center;
   background-color: $color_4;
-  border-radius: 30px;
+  border-radius: 30px !important;
   -webkit-backdrop-filter: blur(6px);
           backdrop-filter: blur(6px);
   overflow-x: hidden;
